# ChangeLog for dev-db/oracle-instantclient-jdbc
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/oracle-instantclient-jdbc/ChangeLog,v 1.31 2012/03/07 15:33:54 haubi Exp $

  07 Mar 2012; Michael Haubenwallner <haubi@gentoo.org>
  oracle-instantclient-jdbc-11.2.0.3.ebuild:
  fix typo with non-multilib archs

*oracle-instantclient-jdbc-11.2.0.3 (07 Mar 2012)

  07 Mar 2012; Michael Haubenwallner <haubi@gentoo.org>
  +oracle-instantclient-jdbc-11.2.0.3.ebuild:
  Revbump. Use EAPI 4. Update homepage. Drop useless postinst info.
  Add multilib support.
  RDEPEND on _same_ version of oracle-instantclient-basic.

  09 Feb 2012; Michael Haubenwallner <haubi@gentoo.org> metadata.xml:
  Taking over maintainership.

  09 Feb 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #85926

*oracle-instantclient-jdbc-11.2.0.2 (12 Nov 2010)

  12 Nov 2010; Tobias Scherbaum <dertobi123@gentoo.org>
  -oracle-instantclient-jdbc-11.1.0.7.0.ebuild,
  -oracle-instantclient-jdbc-11.2.0.0.2.ebuild,
  -oracle-instantclient-jdbc-11.2.0.1.ebuild,
  +oracle-instantclient-jdbc-11.2.0.2.ebuild:
  Version bump

*oracle-instantclient-jdbc-11.2.0.1 (31 Dec 2009)
*oracle-instantclient-jdbc-11.2.0.0.2 (31 Dec 2009)

  31 Dec 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +oracle-instantclient-jdbc-11.2.0.0.2.ebuild,
  +oracle-instantclient-jdbc-11.2.0.1.ebuild:
  Version bump (#293590)

  31 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  oracle-instantclient-jdbc-11.1.0.7.0.ebuild:
  Fix typo

*oracle-instantclient-jdbc-11.1.0.7.0 (27 Dec 2008)

  27 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  +oracle-instantclient-jdbc-11.1.0.7.0.ebuild:
  Version bump, #228803

  18 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  oracle-instantclient-jdbc-10.2.0.3.ebuild:
  Stable on amd64 wrt bug #225813.

  11 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>