@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/oracle-instantclient-odbc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/oracle-instantclient-odbc/ChangeLog,v 1.8 2012/03/07 15:33:12 haubi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/oracle-instantclient-odbc/ChangeLog,v 1.9 2012/03/07 16:25:00 haubi Exp $
+
+  07 Mar 2012; Michael Haubenwallner <haubi@gentoo.org>
+  oracle-instantclient-odbc-11.2.0.3.ebuild:
+  must not set ABI for non-multilib-able archs at all
 
   07 Mar 2012; Michael Haubenwallner <haubi@gentoo.org>
   oracle-instantclient-odbc-11.2.0.3.ebuild:
